# rustmc

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  Makefile.am  Makefile.in  README.md  build.sh  config.h  config.h.in  config.status  configure  configure~  extract_integration_test_ir  extract_ir_from_rlib  extract_unit_test_ir  get_combined_integration_tests_with_deps  get_combined_unit_tests_with_deps  get_combined_with_deps  get_eval_results.sh  get_external_functions.sh  get_test_results.sh  pfds_verify.sh  run_genmc.txt  sanity_check.sh  verify-main.sh  verify-nomangles.sh  verify.sh  verify_all_tests.sh  verify_all_tests_OLD.sh  verify_all_tests_dep_overrides.sh  verify_all_tests_link_bc.sh  verify_all_tests_link_ll.sh  verify_all_tests_medium_tutorial  verify_all_tests_override_all.sh  verify_all_tests_parking_lot.sh  verify_all_tls_tests.sh  verify_all_unit_tests.sh  verify_archery_tests.sh  (+12 more)
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2  traces.3
benchmarks/internment_unsafe_sync_reproduction/: Cargo.toml
benchmarks/memcpy_ffi_example/: Cargo.toml  build.rs  memcpy_example.c
benchmarks/nax/: Cargo.toml  build.txt
benchmarks/nax/src/: main.rs
benchmarks/race_free_ffi_test/: Cargo.toml  bitcode.txt  build.rs  combined.ll  hello.c  hello.h
benchmarks/racy_ffi/: bitcode.txt  combined.ll  racy.c
benchmarks/rand_atomicity_violation_reproduction/: Cargo.toml
benchmarks/raw_ptr_race/: Cargo.toml
experiment1_loom/: README.md  bitcode.txt  bitcode_test.txt  experiment_results.csv  run_experiment1.py  test_inventory_artifact.csv  test_inventory_artifact_small.csv  test_output.txt  verify-nomangles-alt-toolchain.sh  verify-nomangles.sh  verify_single.sh
experiment1_loom/loom-tests-ported/: LOOM-LICENSE.txt  arc_ported_genmc.rs  atomic_int_ported_fixed.rs  atomic_ported_genmc.rs  atomic_relaxed_ported_genmc.rs  condvar_ported.rs  condvar_ported_simplified.rs  fence_ported.rs  futures_ported.rs  litmus_ported.rs  mutex_into_inner.rs  mutex_ported.rs  rwlock_ported.rs  rwlock_regression1_ported.rs  smoke_ported_genmc.rs  spec_ported.rs  thread_api_ported.rs  thread_local_ported.rs  thread_local_ported_simplified.rs  unsafe_cell_ported_genmc.rs  yield_ported.rs
experiment1_loom/test_results/: arc_ported_genmc_all_summary.txt  arc_ported_genmc_sentinel_OFF_summary.txt  arc_ported_genmc_sentinel_ON_summary.txt  atomic_int_ported_fixed_all_summary.txt  atomic_ported_genmc_all_summary.txt  atomic_relaxed_ported_genmc_all_summary.txt  condvar_ported_simplified_all_summary.txt  fence_ported_all_summary.txt  futures_ported_all_summary.txt  litmus_ported_all_summary.txt  mutex_into_inner_all_summary.txt  mutex_ported_all_summary.txt  rwlock_ported_all_summary.txt  rwlock_regression1_ported_all_summary.txt  smoke_ported_genmc_all_summary.txt  spec_ported_all_summary.txt  thread_api_ported_all_summary.txt  thread_local_ported_simplified_all_summary.txt  unsafe_cell_ported_genmc_all_summary.txt  yield_ported_all_summary.txt
experiment1_loom/test_results_alt_toolchain/: arc_ported_genmc_all_summary.txt
experiment2_crates/: .gitignore  README.md  collect_results.py  experiment_results.csv  lock_dependencies.sh  rename_duplicate_rust_tests.py  run_experiment2  run_experiment2.sh  run_experiment_2  verify_archery_tests.sh  verify_crate  verify_parking_lot_tests.sh  verify_parking_tests.sh  verify_ringbuf.sh  verify_scc_tests.sh  verify_spin_tests.sh  verify_tests  verify_tests.sh
experiment2_crates/verify_test_benchmarks/: .gitignore
extract_externals_from_stdlib_scripts/: extract_ir_from_rlib  extract_symbol_ir  find_symbol
genmc/: Makefile.am
include/: stdatomic.h
override/: globals_override.ll  my_pthread.c  my_pthread.ll
paper_use_cases/: .gitignore  run_all_figures.sh  run_figure1.sh  run_figure10.sh  run_figure5.sh  run_figure6.sh  run_figure9.sh  verify_all_figures.sh  verify_figure.sh
paper_use_cases/racy_ffi/: Cargo.toml
paper_use_cases/results/: figure10_output.txt  figure1_output.txt  figure2_output.txt  figure8_output.txt  figure9_output.txt
run_benchmarks/: nax.sh  race_free_test.sh  racy_test.sh  rand_atomicity_violation_reproduction.sh  rustonomicon.sh  thread_join.sh  thread_join_result.txt  unsafe_sync.sh
scripts/: driver.sh  fast-driver.sh  runcorrect.sh  suite-driver.sh
src/: .gitignore  AccessFilter.cpp  AccessFilter.hpp  CombinatoricUtils.hpp  Config.cpp  Config.hpp  ContextBoundDecider.cpp  DepExecutionGraph.cpp  DriverFactory.hpp  Event.hpp  EventLabel.hpp  Execution.cpp  ExecutionGraph.cpp  ExecutionGraph.hpp  ExternalFunctions.cpp  GenMCDriver.cpp  GenMCDriver.hpp  GraphIterators.hpp  InstAnnotator.cpp  Interpreter.cpp  Interpreter.h  InterpreterEnumAPI.cpp  InterpreterEnumAPI.hpp  LLVMModule.cpp  LLVMUtils.hpp  LabelVisitor.hpp  MDataCollectionPass.cpp  MemAccess.cpp  MemAccess.hpp  ModuleInfo.cpp  RADriver.cpp  RADriver.hpp  Revisit.cpp  Revisit.hpp  SAddr.cpp  SAddr.hpp  SAddrAllocator.hpp  SExprVisitor.hpp  ThreadPool.hpp  main.cpp
src/Static/: LLVMModule.cpp  LLVMModule.hpp  LLVMUtils.cpp  LLVMUtils.hpp  ModuleInfo.cpp  ModuleInfo.hpp
test_results/: bench_summary.txt  state_summary.txt
test_traces/state/: cell_tls_really_is_tls_take_2_verification.txt  cell_verification.txt  (+27 more)
verify_test_benchmarks/someday/: Cargo.toml
verify_test_benchmarks/someday/examples/hashmap/src/: main.rs
verify_test_benchmarks/someday/examples/many/src/: main.rs
verify_test_benchmarks/someday/examples/vec/src/: main.rs
verify_test_benchmarks/someday/src/: lib.rs
verify_test_benchmarks/someday/src/writer/: token.rs
verify_test_benchmarks/someday/target-ir/: .rustc_info.json
verify_test_benchmarks/someday/target-ir/debug/.fingerprint/arc-swap-85098b617620a689/: lib-arc_swap  lib-arc_swap.json
verify_test_benchmarks/someday/target-ir/debug/.fingerprint/someday-1499ec063a3e7bca/: dep-test-lib-someday  output-test-lib-someday  test-lib-someday  test-lib-someday.json
verify_test_benchmarks/someday/target-ir/debug/.fingerprint/someday-7c53bd9fc915255b/: dep-lib-someday  lib-someday  lib-someday.json
(+1252 files in other folders)
