[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "=0.2.39"
#compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[llvm]
assertions = true
